fix spacing issues for todo and done in mobile view

--- a/todo/src/components/todo/css/todoWrapper.css
+++ b/todo/src/components/todo/css/todoWrapper.css
@@ -1,14 +1,12 @@
 .todo {
   width: 90%;
-  height: 80%; 
   padding: 1.5rem; 
-  margin: 1.5rem 1.5rem 5rem;
+  margin: 1.5rem 1.5rem 0rem;
   overflow: visible;
 }
 
 .done {
   width: 90%;
-  height: 80%; 
   padding: 1.5rem; 
   margin: 1.5rem 1.5rem 5rem;
   overflow: visible;
@@ -29,5 +27,8 @@
     flex-direction: row;
     justify-content: space-evenly;
     min-height: 0;
-  } 
+  }
+  .todo, .done {
+    height: 80%;
+  }
 }
